@@ -6,6 +6,10 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.71.00
 
+              pbmtomacp: fix wild pointer dereference with -b larger than
+              image height.  Always broken.  (pbmtomacp was new in X.V11R3
+              (March 1988).
+
               pnmconvol: Fix bug: wrong output for pixels that convolve to
               negative values (should be clipped to zero).  Introduced in
               Netpbm 10.68 (September 2014).
@@ -27,6 +31,9 @@ not yet  BJH  Release 10.71.00
 
               makeman: deal properly with backlash in source.  Thanks Willem
               van Schaik <willem@schaik.com>.
+
+              Build: don't build and install libjpeg and libjasper if we
+              are using external versions of them instead.
 
               Build: work around bug in GCC < 4.2 related to SSE2 builtins
               that causes compile of pamflip to fail.
